# vk-renderer

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
examples/: clear_color.cpp
module/: renderer.ixx
src/renderer/: bindless.cpp  bindless.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  common.h  context.cpp  device.cpp  device.h  includes.h  pipeline.h  pipeline_manager.cpp  pipeline_manager.h  renderer.h  sampler.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vma_impl.cpp
src/renderer/details/: profiler.h
